tests/machine/x/c/query_sum_select.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/query_sum_select.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/query_sum_select.c:41:30: error: incompatible type for argument 1 of ‘_sum_int’
   41 |     _t2.data[_t3] = _sum_int(n);
      |                              ^
      |                              |
      |                              int
/workspace/mochi/tests/machine/x/c/query_sum_select.c:22:30: note: expected ‘list_int’ but argument is of type ‘int’
   22 | static int _sum_int(list_int v) {
      |                     ~~~~~~~~~^
/workspace/mochi/tests/machine/x/c/query_sum_select.c:45:19: error: incompatible types when initializing type ‘double’ using type ‘list_int’
   45 |   double result = _t2;
      |                   ^~~

   1: #include <stdio.h>
